<resources>
    <string name="app_name">CanchApp</string>
    <string name="txt_name">Nombre</string>
    <string name="txt_phone">Teléfono</string>
    <string name="txt_email">E-mail</string>
    <string name="txtHorario">Horario</string>
    <string name="btnContinuar">CONTINUAR</string>
    <string name="btnAtras">ATRAS</string>
    <string name="btnListo">LISTO!</string>
    <string name="btnComenzar">COMENZAR</string>
    <string name="btnVerDetalle">Ver Detalle</string>
    <string name="txtNombreCancha">Nombre De Cancha</string>
    <string name="txtDeporte">Deporte</string>
    <string name="txtPrecio">Precio</string>
    <string name="txtBuscarCanchas">Buscar Canchas</string>
    <string name="txtSuperficie">Superficie</string>
    <string name="txtMisReservas">Mis Reservas</string>
    <string name="txtMiPerfil">Mi Perfil</string>
    <string name="txtMiClub">Mi Club</string>
    <string name="txtMisCanchas">Mis Canchas</string>
    <string name="txtMisAlquileres">Mis Alquileres</string>
    <string name="txtCerrarSesion">Cerrar Sesión</string>
    <string name="txtRegistrarClub">Registrar Club</string>
    <string name="txtErrorLogin">Ha ocurrido un error.</string>
    <string name="notFirebaseAuth">No se pudo autenticar con Firebase.</string>
    <string name="notLogIn">No se pudo iniciar sesión.</string>
    <string name="notLogOut">No se pudo cerrar sesión.</string>
    <string name="txtSinConexion">No se tiene acceso a internet</string>
    <string name="txtMalaConexion">Por favor compruebe su conexión a internet</string>

    <string name="txtDialogoTengoClub">Tenés cancha? Agregala!</string>
    <string name="txtDialogoAgregarImagen">Elegir imagen de galeria.</string>
    <string name="txtDialogExplanationPermisos1">Los permisos son necesarios para poder usar la aplicación.</string>
    <string name="txtDialogExplanationPermisos2">Para usar las funciones de la app necesitas aceptar los permisos</string>

    <string name="txtTituloPermisosKo">Permisos denegados</string>
    <string name="txtTituloPermisosOk">Permisos aceptados</string>
    <string name="txtAbortarPermisos">Cancelar</string>

    <string name="txtConfirmacionGuardarClub">Tu Club ha sido guardado correctamente.</string>
    <string name="txtConfirmacionGuardarCancha">Tu Cancha ha sido guardada correctamente.</string>
    <string name="txtAclaracionTecho">Confirmar que la cancha tiene techo.</string>

    <string name="txtTechoSwitchOn">Sí es techada.</string>
    <string name="txtTechoSwitchOff">NO es techada.</string>
    <string name="txtSubirFotosCancha">Subi fotos de tu cancha:</string>
    <string name="txtDescripcionBtnCargaFotos">Para mostrar opciones y luego imagen.</string>
    <string name="txtDescripcionScrollCargaFotos">Para visualizar en el Scroll.</string>

    <string name="btnAprobarReserva">Aprobar</string>
    <string name="btnCancelarReserva">Cancelar</string>
    <string name="btnReservar">Reservar</string>
    <string name="title_activity_maps">Map</string>

    <string name="txtCanchaSuperficie">Superficie: %1$s</string>
    <string name="txtCanchaTechada">Techada</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="txtSeleccionarClub">Seleccione una ubicación para su club</string>
    <string name="txtCompletarTodosLosCampos">Complete todos los campos antes de continuar.</string>
    <string name="txtCompletarNombre">Debe ingresar un nombre</string>
    <string name="txtEmailIncorrecto">El email ingresado es incorrecto</string>

    <string name="txtHintAutocompleteMapa">Ubicación actual</string>
    <string name="txtTituloMarcadorMapaClub">Mi Club</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtHorariosFechaHoy">Hoy</string>
    <string name="txtHorarioLibre">Libre</string>
    <string name="txtHorarioReservado">Reservado</string>
    <string name="txtHorarioPendienteAprobacion">Pendiente</string>

    <string name="txtErrorDescargandoInfo">No se pudo obtener la información</string>
    <string name="txtErrorSubiendoFotos">No se pudieron subir algunas imagenes</string>

    <string name="txtDialogoNoMostrar">No volver a mostrar</string>

    <!-- Mensajes sobre errores -->
    <string name="txt_error_empty">El campo no puede estar vacío</string>
</resources>
