<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/horario"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:gravity="center_vertical"
            android:text="18:00"
            android:textColor="@color/colorAclaracion"/>

        <LinearLayout
            android:id="@+id/layout_horario_reservado"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/estado_reserva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    />

                <TextView
                    android:id="@+id/usuario_reserva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/boton_aprobar_reserva"
                    style="@style/btnAprobarReserva"
                    android:text="@string/btnAprobarReserva"
                    android:layout_margin="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/boton_cancelar_reserva"
                    style="@style/btnCancelarReserva"
                    android:text="@string/btnCancelarReserva"
                    android:layout_margin="3dp"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_horario_libre"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/txtHorarioPendienteAprobacion"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/boton_reservar"
                style="@style/btnReservar"
                android:text="@string/btnReservar"
                android:layout_margin="3dp"
                android:layout_width="0dp"
                android:layout_weight="0.2" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSeparador" />

</LinearLayout>