<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding_sides"
    android:paddingRight="@dimen/padding_sides"
    android:clickable="true"
    tools:context="com.santiago.canchaapp.app.fragment.CargarFotosCanchaFragment">

    <TextView
        android:id="@+id/txtCargarFotosCancha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/margin_topBottom_text"
        android:layout_marginBottom="@dimen/margin_topBottom_text"
        android:textColor="@color/colorText"
        android:text="@string/txtSubirFotosCancha"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:layout_weight="2"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ImageButton
            android:id="@+id/btnOpciones01"
            android:layout_width="115dp"
            android:layout_height="105dp"
            android:background="@drawable/agregar"
            android:contentDescription="@string/txtDescripcionBtnCargaFotos"/>

        <ImageButton
            android:id="@+id/btnOpciones02"
            android:layout_width="@dimen/width_imageview_add"
            android:layout_height="@dimen/height_imageview_add"
            android:background="@drawable/cancha_sin_foto"
            android:contentDescription="@string/txtDescripcionBtnCargaFotos"/>

        <ImageButton
            android:id="@+id/btnOpciones03"
            android:layout_width="@dimen/width_imageview_add"
            android:layout_height="@dimen/height_imageview_add"
            android:background="@drawable/cancha_sin_foto"
            android:contentDescription="@string/txtDescripcionBtnCargaFotos"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:layout_weight="2"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <ImageButton
            android:id="@+id/btnOpciones04"
            android:layout_width="115dp"
            android:layout_height="@dimen/height_imageview_add"
            android:background="@drawable/cancha_sin_foto"
            android:contentDescription="@string/txtDescripcionBtnCargaFotos"/>

        <ImageButton
            android:id="@+id/btnOpciones05"
            android:layout_width="@dimen/width_imageview_add"
            android:layout_height="@dimen/height_imageview_add"
            android:background="@drawable/cancha_sin_foto"
            android:contentDescription="@string/txtDescripcionBtnCargaFotos"/>

        <ImageButton
            android:id="@+id/btnOpciones06"
            android:layout_width="@dimen/width_imageview_add"
            android:layout_height="@dimen/height_imageview_add"
            android:background="@drawable/cancha_sin_foto"
            android:contentDescription="@string/txtDescripcionBtnCargaFotos"/>
    </LinearLayout>


    <HorizontalScrollView
        android:id="@+id/Scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        android:scrollbars="none"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/imagen01"
                android:contentDescription="@string/txtDescripcionScrollCargaFotos"/>
            <ImageView
                android:id="@+id/ImageView02"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/imagen02"
                android:contentDescription="@string/txtDescripcionScrollCargaFotos"/>
            <ImageView
                android:id="@+id/ImageView03"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/imagen03"
                android:contentDescription="@string/txtDescripcionScrollCargaFotos"/>
            <ImageView
                android:id="@+id/ImageView04"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/imagen04"
                android:contentDescription="@string/txtDescripcionScrollCargaFotos"/>
            <ImageView
                android:id="@+id/ImageView05"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/imagen05"
                android:contentDescription="@string/txtDescripcionScrollCargaFotos"/>
            <ImageView
                android:id="@+id/ImageView06"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/imagen06"
                android:contentDescription="@string/txtDescripcionScrollCargaFotos"/>
            <ImageView
                android:id="@+id/ImageView07"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/imagen07"
                android:contentDescription="@string/txtDescripcionScrollCargaFotos"/>
        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/btnListo"
        style="@style/btnListo"
        android:text="@string/btnListo"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

</LinearLayout>